syntax = "proto3";

package api;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (TodoResponse) {}
  rpc ReadTodo (ReadTodoRequest) returns (TodoResponse) {}
  rpc UpdateTodo (UpdateTodoRequest) returns (TodoResponse) {}
  rpc DeleteTodo (DeleteTodoRequest) returns (TodoResponse) {}
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message ReadTodoRequest {
  string id = 1;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message DeleteTodoRequest {
  string id = 1;
}

message TodoResponse {
  Todo todo = 1;
  string error = 2;
}
